[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Start_game.gd" type="Script" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.3828
margin_top = 4.71936
margin_right = 10.3827
margin_bottom = 4.71936
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 354.273
margin_top = 340.886
margin_right = 548.273
margin_bottom = 388.886
text = "Start"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxes_properties" type="Control" parent="."]
margin_left = 362.0
margin_top = 125.0
margin_right = 544.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_x" type="LineEdit" parent="boxes_properties"]
margin_left = 101.108
margin_top = 6.60649
margin_right = 159.108
margin_bottom = 30.6065
rect_pivot_offset = Vector2( -895.274, -74.9298 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_z" type="LineEdit" parent="boxes_properties"]
margin_left = 101.221
margin_top = 36.8098
margin_right = 159.221
margin_bottom = 60.8098
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_x" type="Label" parent="boxes_properties"]
margin_left = 18.8773
margin_top = 14.1581
margin_right = 94.8773
margin_bottom = 28.1581
text = "Box length"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_z" type="Label" parent="boxes_properties"]
margin_left = 22.653
margin_top = 40.5866
margin_right = 98.653
margin_bottom = 54.5866
text = "Box width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="floor_properties" type="Control" parent="."]
margin_left = 350.0
margin_top = 40.0
margin_right = 564.0
margin_bottom = 108.0

[node name="floor_x" type="LineEdit" parent="floor_properties"]
margin_left = 119.219
margin_top = 6.24918
margin_right = 177.219
margin_bottom = 30.2492
rect_pivot_offset = Vector2( -895.274, -74.9298 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="floor_z" type="LineEdit" parent="floor_properties"]
margin_left = 119.333
margin_top = 37.3964
margin_right = 177.333
margin_bottom = 61.3964
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="floor_properties"]
margin_left = 29.4374
margin_top = 10.9692
margin_right = 105.437
margin_bottom = 24.9692
text = "Floor length"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="floor_properties"]
margin_left = 27.5497
margin_top = 46.8364
margin_right = 103.55
margin_bottom = 60.8364
text = "Floor width"
__meta__ = {
"_edit_use_anchors_": false
}
